--- a/src/components/main.css
+++ b/src/components/main.css
@@ -2,18 +2,43 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Poppins', sans-serif;
+    
 }
+
 
 .main-body {
-   
-    display: flex;
-    width: 95%;
-    max-width: 1100px;    
+    display: flex; 
     margin: 0 auto;
+    padding-bottom: 2%;
     justify-content: center; 
     align-items: center;
-    flex-wrap: wrap; 
+    flex-wrap: wrap;
+    background-color: black;
+    color: white;
+    
+        
 }
 
+.main-wrap{
+    width: 95%;
+    max-width: 1100px;
+}
+
+.slide-tag {
+    margin: 1% auto 0 2%;
+   
+}
+
+
+.footer {
+    height: 5vh;
+    border-top: 1px solid black;
+    display: flex;
+    align-items: center;
+    padding: 0 3%;
+   
+    
+}
 
 
