--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -5,10 +5,11 @@
 }
 
 .nav-bar {
+    
     display: flex;
     padding: 20px;
     height: 8vh;
-    justify-content: space-between;
+    
     align-items: center;
 }
 
@@ -16,6 +17,24 @@
     width: 20%;
     display: flex;
     justify-content: space-around;
+    margin: 0 10% 0 auto;
    
+}
+
+.link-panel a {
+    text-decoration: none;
+    color: currentColor;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1%;
+    margin: 1%;
+    font-size: 1.1em;
+}
+
+.logo {
+    height: 5vh;
+    border: 1px solid red;
+    width: 5vh;
+    margin: 0 auto 0 10%;
 }
 
