--- a/src/components/mainSlide.css
+++ b/src/components/mainSlide.css
@@ -6,8 +6,7 @@
 
 
 
-.main-slider {
-    
+.main-slider { 
     position: relative;
     display: flex ;
     height: 55vh;
@@ -15,45 +14,28 @@
     align-items: center;
     margin: 2% auto;
     width: 95%;
-    max-width: 1100px;
-    
-    
-    
-   
-     
-    
+    max-width: 1100px;   
 }
 
 
 .slide a {
     color: currentColor;
     text-decoration: none;
-    width: 100%;
-    
-    
+    width: 100%;   
 }
 
 .slide{
     display: none;
     border-radius: 15px; 
     overflow: hidden;
-    background-color: white;
-    
-    
-    
+    background-color: white;  
 }
 .active{
     height: inherit;
     width: 100%;
     display: flex;
-    justify-content: center;
-    
-    
-    
-    
+    justify-content: center;  
 }
-
-
 
 .slide-text {
     position: absolute;
@@ -66,11 +48,20 @@
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     overflow: hidden;
-   
-    
-
+    color: black;  
 }
 
+.slide-header {
+    display: flex;
+    align-items:baseline
+    
+}
+
+.slide-info {
+    margin: 0 2%;
+    font-style: oblique;
+    
+}
 
 .left-arrow{
     position: absolute;
@@ -108,7 +99,7 @@
 
 
 
-
+/*      SUBSLIDE     */
 
 
 
@@ -156,6 +147,7 @@
     right: 0;
     position: sticky;
     transform: rotate(0.5turn);
+    margin-left: auto;
     
     
 }
@@ -165,3 +157,7 @@
     width: 7vh;
     
 }
+
+
+
+
