--- a/src/App.css
+++ b/src/App.css
@@ -4,3 +4,21 @@
   box-sizing: border-box;
 }
 
+.App {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  height: 100vh;
+}
+
+.footer {
+  height: 5vh;
+  width: 100%;
+  border-top: 1px solid black;
+  margin-top: auto;
+  display: flex;
+  align-items: center;
+  padding-left: 2%;
+ 
+  
+}
