--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -14,10 +14,10 @@
 }
 
 .link-panel {
-    width: 20%;
+    width: 35%;
     display: flex;
-    justify-content: space-around;
-    margin: 0 10% 0 auto;
+    justify-content: space-between;
+    margin: 0 5% 0 auto;
    
 }
 
@@ -30,6 +30,9 @@
     margin: 1%;
     font-size: 1.1em;
 }
+.search-icon{
+    height: 2.5vh;
+}
 
 .logo {
     height: 5vh;
@@ -38,3 +41,9 @@
     margin: 0 auto 0 10%;
 }
 
+@media screen and (min-width: 650px), (aspect-ratio: 4/3) { 
+    .link-panel {
+        width: 20%;
+        justify-content: space-around;       
+    }
+}
