--- a/src/App.css
+++ b/src/App.css
@@ -15,7 +15,7 @@
   height: 5vh;
   width: 100%;
   border-top: 1px solid black;
-  margin-top: auto;
+ /*  margin-top: auto; */
   display: flex;
   align-items: center;
   padding-left: 2%;
