--- a/src/components/filmPage.css
+++ b/src/components/filmPage.css
@@ -1,29 +1,16 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
 
 .page-body {
-
-    
     width: 95%;
     max-width: 900px;
-    margin: 0 auto;
-    
+    margin: 0 auto;   
 }
-
 .page-video {    
-    object-fit: contain;
-    
+    object-fit: contain;    
 }
-
 .page-first {
     display: flex;
-    flex-direction: column;
-   
+    flex-direction: column; 
 }
-
 .page-poster {
     height: 35vh;
     object-fit: cover;
@@ -31,14 +18,12 @@
     margin: 0 auto;  
     display: flex;   
 }
-
 .page-header-container{
     display: flex;
     justify-content: space-around;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 .page-header{
     width: 80%;
     max-width: 600px;
@@ -46,29 +31,24 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding-top: 5%;
-    
+    padding-top: 5%;   
 }
 .page-header h1 {
     text-align:center
 }
-
-
 .page-info{
     font-weight: 300;
     font-style: oblique;
     margin: 2% 1%;
-
 }
-
 .page-synopsis {
     font-size: 1.1em;
     display: block;
     width: 90%;
-    margin: 2% 0;
-    
-   
+    margin: 2% 0;   
 }
+
+
 
 @media screen and (min-width: 650px), (aspect-ratio: 4/3) { 
     .page-video {    
@@ -114,15 +94,93 @@
 
 } */
 
+.page-second {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    margin-bottom: 5vh;
+}
+
 .cast {
     margin: 2%;
 }
-
 .cast h2 {
     margin: 1%;
 }
 .cast-list {
     margin: 0.5% 0;
     list-style: none;
+}
 
+.media {
+    width: 25%;
+    min-width: 150px;
+    height: inherit;
+    margin-top: 3%;
+    display: flex;
+    flex-direction: column;
+   
+}
+
+.media button {
+    margin: 2% auto;
+    width: 90%;
+}
+
+
+.popup {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.3);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.popup-inner {
+    position: relative;
+    padding: 5%;
+    width: 100%;
+    max-width: 1100px;
+    background-color: white;
+}
+
+ .popup-inner button {
+    position: absolute;
+    width: auto;
+    top:1%;
+    right: 1%;
+}
+
+.page-slider{
+    height: 90%;
+    width: 90%;
+    
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    
+}
+.page-slide {
+    width: inherit;
+}
+.page-slide img {
+    height: 80%;
+    border: 1px solid green;
+    margin: 0 auto;
+}
+
+.page-left-arrow{
+    position: absolute;
+    left: -90%;
+    
+}
+
+.page-left-arrow{
+    position: absolute;
+    right: 10%;
 }
