--- a/src/components/main.css
+++ b/src/components/main.css
@@ -10,12 +10,13 @@
 
 .main-body {
     display: flex; 
-    
     padding-bottom: 2%;
     justify-content: center; 
     align-items: center;
     background-color: black;
     color: white;
+    margin: 0 auto;
+    width: 100%;
     
         
 }
