--- a/src/components/mainSlide.css
+++ b/src/components/mainSlide.css
@@ -41,7 +41,7 @@
     position: absolute;
     bottom: 0;
     padding: 2%;
-    background-color: hsl(0, 0%, 100%,0.3);
+    background-color: hsl(0, 0%, 100%,0.4);
     z-index: 3;
     width: 100%;
     height: 30%;
@@ -53,16 +53,12 @@
 
 .slide-header {
     display: flex;
-    align-items:baseline
-    
+    align-items:baseline   
 }
-
 .slide-info {
     margin: 0 2%;
-    font-style: oblique;
-    
+    font-style: oblique;   
 }
-
 .left-arrow{
     position: absolute;
     top: 50%;
@@ -71,10 +67,12 @@
     cursor: pointer;
     user-select: none;
     width: 10vh;
-    transform: rotate(-0.25turn);
-    background: none;
-    border: none;
-    opacity: 0.7;
+    height: 10vh;
+    mix-blend-mode: exclusion;
+    
+    border-radius: 50%;
+    background-color: hsla(0, 0%, 55%, 0.7);
+    border: 2px solid hsla(0, 0%, 100%, 0.9);
 
     
     
@@ -89,10 +87,11 @@
     cursor: pointer;
     user-select: none;
     width: 10vh;
-    transform: rotate(0.25turn);
-    background: none;
-    border: none;
-    opacity: 0.8;
+    height: 10vh;
+    mix-blend-mode: exclusion;
+    border-radius: 50%;
+    background-color: hsla(0, 0%, 55%, 0.7);
+    border: 2px solid hsla(0, 0%, 100%, 0.9);
 }
 
 
@@ -101,24 +100,55 @@
 
 /*      SUBSLIDE     */
 
-
-
-
 .subslide-container {
     display: flex;
     position: relative;
     align-items: center;
     max-width: 1100px;
     overflow-x: scroll;
+    overflow-y: hidden;
     border-top: 1px solid white;
-    scroll-behavior: smooth; 
+    scroll-behavior: smooth;
+     
 } 
 
-.subslide-container div {
+.sub-card-container{
     transform: translateX(-4vh);
+    height: 25vh;
+    margin: 1%;
+    position: relative;
+    transition: transform 0.3s;
+     
+     
+}
+.sub-card-container:hover {
+    transform: translateX(-4vh) scale(1.15);
+    
+     
+}
+.card-overlay{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content: space-evenly;
+    position: absolute;
+    padding: 5%;
+    height: 102%;
+    width: 102%;
+    background-color: hsla(0, 0%, 0%, 0.6);
+    opacity: 0;
+    transition: opacity 0.3s;
+    text-align: center; 
+     
+}
+.sub-card-container a {
+    color: currentColor; 
 }
 
-
+.card-overlay:hover {
+    opacity: 1;
+    
+}
 
 
 .subSlide-button {
@@ -128,34 +158,26 @@
     z-index: 4;
     background: none;
     border: 1px solid white;
-    padding: 3vh 0;
+    
     opacity: 0.8;
     border-radius: 5px;
     background-color: hsla(0, 0%, 100%, 0.2);
-
-
 }
 
 .button-prev  {
     left: 0;
-    position: sticky;
-    
-    
+    position: sticky;    
 }
-
 .button-next{
     right: 0;
     position: sticky;
-    transform: rotate(0.5turn);
-    margin-left: auto;
-    
-    
+   
+    margin-left: auto;   
 }
 
-.subSlide-button img {
+.subSlide-button svg {
     position: static;
-    width: 7vh;
-    
+    width: 7vh;    
 }
 
 
