--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -6,14 +6,16 @@
 
 .catalog-body{
     width: 100%;
+    height: 100%;
     display: flex;
-    
+    flex-direction: column;
     background-color: black;
 }
 
 .main-list {
     width: 90%;
     max-width: 1060px;
+    height: fit-content;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
