--- a/src/components/contact.css
+++ b/src/components/contact.css
@@ -15,6 +15,7 @@
     flex-direction: column;
     margin: 2% auto;
     justify-content: center;
+    padding: 2%;
       
 }
 
@@ -50,7 +51,7 @@
 
 .social-icon {
     width: 100%;
-    height: 30vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
