--- a/src/components/filmGallery.css
+++ b/src/components/filmGallery.css
@@ -5,22 +5,48 @@
 }
 
 
+.film-gallery-container {
+    position: relative;
+    
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    
+}
+ .film-gallery {
+    position: relative;
+    left: 0;
+    top: 0;
+    object-fit: cover;
+    width: 100%;
+    height: 100%;
+    z-index: 10;
+    
+    
+}
 
+ .film-gallery-container:last-child {
+    animation-name: fader;
+    animation-timing-function: linear;
+    animation-delay: 1.5s; 
+    animation-duration: 0.8s;
+    background: none;
+    z-index: 20;
+    
+    background: none;
+    
+  }
 
- .gallery {
-  object-fit: cover;  
-  width: 100%;
-    animation-duration: 2.5s;
-    animation-name: fade; 
+ 
+ @keyframes fader {
+    0%  { opacity: 1; }
    
-}
+    100% { opacity: 0; }
+   
+  }
+ 
 
-@keyframes fade {
-    0% {opacity: 0;}
-    5% {opacity: 1;}
-    95% {opacity: 1;}
-    100% {opacity: 0;}
-}
+
 
 
 
