--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -1,8 +1,4 @@
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
+
 
 .catalog-body{
     width: 100%;
@@ -14,6 +10,7 @@
 }
 .filter-container{
     width: 90%;
+    max-width: 950px;
     margin: 3% auto;
     color: white;
 }
