--- a/src/components/filmGallery.css
+++ b/src/components/filmGallery.css
@@ -2,11 +2,13 @@
 .film-gallery-container {
     position: relative;
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
 }
 .CrossfadeImage{
-    width: 100%; 
+    width: 100%;
+    height: 100%; 
 }
 .CrossfadeImage img {
     object-fit: cover;
