--- a/src/components/mainSlide.css
+++ b/src/components/mainSlide.css
@@ -2,12 +2,12 @@
 .main-slider { 
     position: relative;
     display: flex ;
-    height: 55vh;
+    height: 50vh;
     justify-content: center;
     align-items: center;
     margin: 2% auto;
     width: 95%;
-    max-width: 950px;   
+       
 }
 .slide a {
     color: currentColor;
@@ -37,15 +37,18 @@
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     overflow: hidden;
-    color: black;  
+    color: black;
+    
 }
 .slide-header {
     display: flex;
     align-items:baseline   
 }
+
 .slide-info {
     margin: 0 2%;
-    font-style: oblique;   
+    font-style: oblique;
+    width: fit-content;   
 }
 .left-arrow{
     position: absolute;
@@ -75,6 +78,21 @@
     background-color: hsla(0, 0%, 55%, 0.7);
     border: 2px solid hsla(0, 0%, 100%, 0.9);
 }
+
+@media screen and (max-width: 650px) {
+    h1 {
+        font-size: 1.2em;
+    }
+    p {
+        font-size: .8em;
+    }
+    .slide-header h1 {
+        width: 60%;
+    }
+}
+
+
+
 
 /*      SUBSLIDE     */
 
