--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -25,10 +25,9 @@
     width: 95%;
     max-width: 830px;
     height: fit-content;
-   
     display: flex;
     flex-wrap: wrap;
-    
+    overflow: scroll;
     gap: 15px;
   
     
