--- a/src/components/filmPage.css
+++ b/src/components/filmPage.css
@@ -61,6 +61,9 @@
     text-align: center;
     width: 100%;
 }
+.page-header p {
+    display: inline;
+}
 .page-info{
     font-weight: 300;
     font-style: oblique;
