--- a/src/components/mainSlide.css
+++ b/src/components/mainSlide.css
@@ -17,27 +17,35 @@
 .slide{
     display: none;
     border-radius: 15px; 
-    overflow: hidden;
-    background-color: white;  
+    overflow: hidden;   
 }
 .active{
     height: inherit;
     width: 100%;
     display: flex;
-    justify-content: center;  
+    justify-content: center;
 }
+
+.active img {
+    object-fit: cover; 
+    width: 100%;
+    height: 100%;
+    
+    margin: 0;
+}
+
 .slide-text {
     position: absolute;
     bottom: 0;
     padding: 2%;
-    background-color: hsl(0, 0%, 100%,0.4);
+    background: none;
     z-index: 3;
     width: 100%;
     height: 30%;
     border-bottom-left-radius: 15px;
     border-bottom-right-radius: 15px;
     overflow: hidden;
-    color: black;
+    color: ghostwhite;
 }
 .slide-header {
     display: flex;
@@ -51,30 +59,30 @@
 .left-arrow{
     position: absolute;
     top: 50%;
-    left:-5%;
+    transform: translateY(-50%);
+    left:-9%;
     z-index: 4;
     cursor: pointer;
     user-select: none;
     width: 10vh;
     height: 10vh;
-    mix-blend-mode: exclusion;
-    border-radius: 50%;
-    background-color: hsla(0, 0%, 55%, 0.7);
-    border: 2px solid hsla(0, 0%, 100%, 0.9);   
+    background: none;
+    border: none;
+
 }
 .right-arrow {
     position: absolute;
     top: 50%;
-    right:-5%;
+    transform: translateY(-50%);
+    right:-9%;
     z-index: 4;
     cursor: pointer;
     user-select: none;
     width: 10vh;
     height: 10vh;
-    mix-blend-mode: exclusion;
-    border-radius: 50%;
-    background-color: hsla(0, 0%, 55%, 0.7);
-    border: 2px solid hsla(0, 0%, 100%, 0.9);
+    background: none;
+    border: none;
+    
 }
 
 @media screen and (max-width: 650px) {
