--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -5,7 +5,7 @@
     width: 100%;
     align-items: center;
     justify-content: space-around;
-    background-color: maroon;
+    background: black;
     z-index: 1;
     gap: 2%;
     color: white;
@@ -23,6 +23,7 @@
 }
 .link-panel {
     width: fit-content;
+    min-width: 40%;
     max-width: 60%;
     display: flex;
     justify-content: flex-end;
@@ -32,7 +33,7 @@
 .link-panel a {
     text-decoration: none;
     color: currentColor;
-    border: 2px solid white;
+    font-size: 1.1em;
     border-radius: 5px;
     padding: 1.5%;
     margin: 2%;
