--- a/src/components/nav.css
+++ b/src/components/nav.css
@@ -11,7 +11,8 @@
     color: white;
 }
 .logo-link{
-    max-width: 40%;
+    
+    max-width: 50%;
     display: flex;
     align-items: center;
     height: inherit;
@@ -24,7 +25,8 @@
     border: 2px solid ;
     padding: 3px;
     border-radius: 5%;
-    font-size: 2.6em;
+    font-size: 2em;
+    width: 100%;
 
     animation-name: borderColor;
 	animation-duration: 10s;
