--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,14 +4,47 @@
     box-sizing: border-box;
 }
 .card-container { 
-   
-    margin: 1%;
+    height:fit-content;
+    margin: 0.5% 1%;
+    position: relative;
+    transition: transform 0.3s;
+    
 }
 .card-container img {
-   
-    height: 100%; 
-    margin: 0 auto;   
+    object-fit: contain;  
 }
+
+.card-container:hover {
+    transform: scale(1.15);    
+}
+
+.card-overlay{
+    display: flex;
+    flex-direction: column;
+    align-items:center;
+    justify-content:space-around;
+    position: absolute;
+    padding: 5%;
+    height: 102%;
+    width: 102%;
+    color: ghostwhite;
+    background-color: hsla(0, 0%, 0%, 0.7);
+    opacity: 0;
+    transition: opacity 0.3s;
+    text-align: center;
+    font-size: 0.9em;  
+}
+.card-overlay h2 {
+    font-size: 1.3em;
+}
+.card-overlay i {
+    margin-top: 0;
+}
+
+.card-overlay:hover {
+    opacity: 1;  
+}
+
 
 
 
