--- a/src/components/mainSlide.css
+++ b/src/components/mainSlide.css
@@ -5,7 +5,7 @@
     height: 50vh;
     justify-content: center;
     align-items: center;
-    margin: 2% auto;
+    margin: 3% auto;
       
 }
 .slide a {
@@ -102,51 +102,15 @@
     display: flex;
     position: relative;
     align-items: center;
+    height: fit-content;
     max-width: 1100px;
     overflow-x: scroll;
     overflow-y: hidden;
-    border-top: 1px solid white;
+    border-top: 2px solid white;
     scroll-behavior: smooth;  
 } 
-.sub-card-container{
-    transform: translateX(-4vh);
-    height: 25vh;
-    margin: 1%;
-    position: relative;
-    transition: transform 0.3s;     
-}
-.sub-card-container:hover {
-    transform: translateX(-4vh) scale(1.15);    
-}
-.card-overlay{
-    display: flex;
-    flex-direction: column;
-    align-items:center;
-    justify-content:space-around;
-    position: absolute;
-    padding: 5%;
-    height: 102%;
-    width: 102%;
-    background-color: hsla(0, 0%, 0%, 0.7);
-    opacity: 0;
-    transition: opacity 0.3s;
-    text-align: center;
-    font-size: 0.9em;  
-}
-.card-overlay h2 {
-    font-size: 1.3em;
-}
-.card-overlay i {
-    margin-top: 0;
-}
-.sub-card-container a {
-    color: currentColor; 
-}
-.card-overlay:hover {
-    opacity: 1;  
-}
+
 .subSlide-button {
-    position: absolute;
     cursor: pointer;
     user-select: none;
     z-index: 4;
@@ -158,7 +122,9 @@
 }
 .button-prev  {
     left: 0;
-    position: sticky;    
+    position: sticky;
+    margin-right: -4%;
+     
 }
 .button-next{
     right: 0;
