--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -4,20 +4,18 @@
     box-sizing: border-box;
 }
 .card-container { 
-    height:fit-content;
-    margin: 0.5% 1%;
+    height:25vh;
+    margin: 0.5% .75%;
     position: relative;
     transition: transform 0.3s;
-    
 }
 .card-container img {
-    object-fit: contain;  
+    object-fit: contain;
+    height: 100%;  
 }
-
 .card-container:hover {
     transform: scale(1.15);    
 }
-
 .card-overlay{
     display: flex;
     flex-direction: column;
@@ -40,7 +38,6 @@
 .card-overlay i {
     margin-top: 0;
 }
-
 .card-overlay:hover {
     opacity: 1;  
 }
