--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -1,6 +1,6 @@
 .catalog-body{
     width: 100%;
-    height: 100vh;
+    height: 85vh;
     display: flex;
     flex-direction: column;
     background-color: black;
@@ -19,12 +19,31 @@
     border-radius: 5px;
 }
 .main-list {
+    width: fit-content;
+    padding: 0 auto;
     width: 95%;
-    
-    height: fit-content;
+    max-width: 950px;
+    height: 55vh;
     display: flex;
     flex-wrap: wrap;
-    overflow: scroll;
     gap: 15px;    
+}
+
+.pagination {
+    display: flex;
+    margin: 2% auto;
+}
+
+.page-item {
+    margin: 10px;
+    
+}
+.page-link {
+    text-decoration: none;
+    color: ghostwhite;
+}
+
+.page-link:active {
+    color: green;
 }
 
