--- a/src/App.css
+++ b/src/App.css
@@ -14,7 +14,7 @@
   height: 5vh;
   width: 100%;
   border-top: 1px solid black;
- 
+  margin-top: auto;
   display: flex;
   align-items: center;
   padding-left: 2%;
