--- a/src/components/catalog.css
+++ b/src/components/catalog.css
@@ -1,10 +1,11 @@
 .catalog-body{
     width: 100%;
-    height: 85vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     background-color: black;
     align-items: center;
+   
 }
 .filter-container{
     width: 90%;
@@ -19,11 +20,9 @@
     border-radius: 5px;
 }
 .main-list {
-    
     padding: 0 auto;
     width: 95%;
     max-width: 950px;
-    height: 55vh;
     display: flex;
     flex-wrap: wrap;
     gap: 15px;    
@@ -34,6 +33,8 @@
     display: flex;
     gap: 10px;
     list-style: none;
+    margin-top: auto;
+    margin-bottom: 2%;
 }
 
 /* .paginationDisabled {
@@ -45,4 +46,11 @@
     font-size: 1.1em;
 }
 
-
+@media screen and (max-width: 760px), (aspect-ratio: 4/3) {
+    .catalog-body{
+        min-height: fit-content;
+        height: 100%;
+    }
+        
+        
+}
