--- a/src/styles/_filmPage.scss
+++ b/src/styles/_filmPage.scss
@@ -1,4 +1,3 @@
-
 .page-body {
     width: 95%;
     max-width: 900px;
@@ -28,39 +27,55 @@
     width: 14vh;
     background-color: hsla(0, 0%, 80%, 0.3);  
 }
-.page-video {    
-    object-fit: contain;    
+.film-gallery-container {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+}
+.CrossfadeImage{
+    width: 100%;
+    height: 100%;
+    img {
+        object-fit: cover;
+        width: 100%;
+        height: 100%;
+    } 
 }
 .page-first {
     display: flex;
     flex-direction: column;
-    margin: 2% 0; 
-}
-.page-poster {
-    height: 35vh;
-    object-fit: cover;
-    align-self: flex-start;
-    margin: 0 auto;  
-    display: flex;   
+    margin: 2% 0;
+    gap: 10px; 
+    img {
+        height: 35vh;
+        object-fit: cover;
+        align-self: flex-start;
+        margin: 0 auto;  
+        display: flex;
+    }
 }
 .page-header-container{
     display: flex; 
     flex-direction: column;
     flex-wrap: wrap;
+    align-items: center;
 }
 .page-header{
     width: 80%;
     max-width: 700px;
     display: flex;
     flex-direction: column;
-    margin: 5% auto 2% auto;  
-}
-.page-header h1 {
-    text-align: center;
-    width: 100%;
-}
-.page-header p {
-    display: inline;
+    margin: 2% auto;
+    h1 {
+        font-size: 1.7em;
+        width: 100%;
+        text-align: center;
+    }
+    p {
+        display: inline;
+    }  
 }
 .page-info{
     font-weight: 300;
@@ -72,7 +87,7 @@
     display: block;
     width: 90%;
     margin: 2% 0; 
-    text-align: justify;  
+    text-align: justify;
 }
 @media screen and (min-width: 650px), (aspect-ratio: 4/3) { 
     .page-video {    
@@ -88,11 +103,11 @@
         padding-top: 1%;
         margin-right: auto;
         width: 100%;
-    }
-    .page-header h1 {
-        text-align: left;
-    }
-    
+        h1 {
+            font-size: 2em;
+            text-align: left;
+        }
+    } 
     .page-synopsis {
         width: auto;   
     }
@@ -105,22 +120,21 @@
 }
 .cast {
     margin: 2%;
-}
-
-.cast h2 {
-    margin: 1%;
-}
-.cast a {
-    text-decoration: none;
-    color: currentColor;
-    font-style: oblique;
-}
-.cast-list li {
-    margin: 0.8% 0;
-    list-style: none;
-}
-.cast-list > a:hover{
-    text-decoration: solid;
+    h2 {
+        margin: 1%;
+    }
+    a {
+        text-decoration: none;
+        color: currentColor;
+        font-style: oblique;
+        &:hover{
+            font-weight: bolder;
+        }
+    }
+    li {
+        margin: 0.8% 0;
+        list-style: none;
+    }
 }
 .media {
     width: fit-content;
@@ -129,6 +143,14 @@
     flex-direction: column;
     justify-content: center;
     width: 30%; 
+}
+.page-button {
+    margin: 2% auto;
+    width: 150px;
+    border: 3px solid black;
+    border-radius: 7px;
+    padding: 3% 0;
+    background: none;
 }
 @media screen and (max-width: 650px) {
     .page-second {
@@ -139,14 +161,6 @@
         width: 90%;
         flex-wrap: wrap;
     }
-}
-.page-button {
-    margin: 2% auto;
-    width: 150px;
-    border: 3px solid black;
-    border-radius: 7px;
-    padding: 3% 0;
-    background: none;
 }
 .popup {
     position: fixed;
@@ -168,7 +182,7 @@
     justify-content: center;
     align-items: center;
 }
- .popup-close {
+.popup-close {
     position: absolute;
     display: flex;
     justify-content: center;
@@ -188,30 +202,22 @@
     justify-content: center;
     align-items: center;
     position: relative;
-    width: 100%; padding: 5%; 
+    width: 100%; padding: 5%;
 }
-.page-slide active {
-    width: 100%;
-}
-.page-slide img {
-    width: 100%; 
+.page-slide  {
+    .active {
+        width: 100%;
+    }
+    img {
+        width: 100%; 
+    }
 }
 .page-left-arrow{
-    position: absolute;
-    left: 0%;
-    height: 15vh;
-    width: 6vh;
-    background-color: hsla(0, 0%, 100%, 0.7);
-    border-radius: 7px;
-    border: none;      
+    @include pageSliderArrow();
+    left: 0%;    
 }
 .page-right-arrow{
-    position: absolute;
+    @include pageSliderArrow();
     right: 0;
-    height: 15vh;
-    width: 6vh;
-    background-color: hsla(0, 0%, 100%, 0.7);
-    border-radius: 7px;
-    border: none;
 }
-
+ 
