--- a/src/styles/_nav.scss
+++ b/src/styles/_nav.scss
@@ -1,19 +1,18 @@
-
 .nav-bar {
     display: flex;
     height: 10vh ;
     width: 100%;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-betweenx;
     background: black;
     z-index: 1;
     gap: 2%;
-    color: white;
+    color: $textWhite;
+    padding: 0 2%;
     
 }
 .logo-link{
-    
-    max-width: 50%;
+   // max-width: 50%;
     display: flex;
     align-items: center;
     height: inherit;
@@ -22,7 +21,7 @@
     
 }
 .logo {
-    font-family: 'Major Mono Display', monospace;
+    font-family: $logoFont;
     border: 2px solid ;
     padding: 3px;
     border-radius: 5%;
@@ -62,7 +61,6 @@
 
 .link-panel {
     width: fit-content;
-    min-width: 40%;
     max-width: 50%;
     display: flex;
     justify-content: flex-end;
@@ -81,15 +79,12 @@
     align-items: center; 
 }
 #i-search {
-    height: 80%;
-    color: white;
+    color: $textWhite;
 }
 .lang {
     background: none;
     color: currentColor;
-    border: none;
-    
-    
+    border: none;   
 }
 @media screen and (min-width: 650px), (aspect-ratio: 4/3) {
 
@@ -110,5 +105,8 @@
     }
     .link-panel a{
         font-size: 0.9em;
+    }
+    #i-search {
+       height: 80%;
     }
  }
