--- a/src/styles/_filmPage.scss
+++ b/src/styles/_filmPage.scss
@@ -142,10 +142,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    width: 30%; 
+    width: 30%;
+    margin: 0; 
 }
 .page-button {
-    margin: 2% auto;
+    margin: 3% auto;
     width: 150px;
     border: 3px solid black;
     border-radius: 7px;
