--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -734,10 +734,11 @@
       -ms-flex-pack: center;
           justify-content: center;
   width: 30%;
+  margin: 0;
 }
 
 .page-button {
-  margin: 2% auto;
+  margin: 3% auto;
   width: 150px;
   border: 3px solid black;
   border-radius: 7px;
@@ -1158,7 +1159,7 @@
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
-  margin: .8% 3%;
+  margin: .5% 3%;
   font-size: .9em;
 }
 
