--- a/src/styles/_home.scss
+++ b/src/styles/_home.scss
@@ -3,46 +3,51 @@
     color: $textWhite;
     width: 100%; 
     padding: 2%;
-    display: flex;
-    flex-direction: column; 
-    align-items: center;   
-    justify-content: center;
 }
-.main-slider { 
-    position: relative;
-    width: 1000px;
-    max-width: 98%;
+.mySwiper {
     height: 50vh;
-    margin: 2% auto;
-    padding: 0 2%;
+    max-width: 1000px;
+    margin-bottom: 5vh;
+    overflow: visible !important;     
 }
-.active{
-    height: inherit;
+.swiper-button-next::after, .swiper-button-prev::after {
+    color: ghostwhite;
+}
+.swiper-pagination {
+    bottom: -7% !important;
+    span {
+        background-color: #f8f8ff;
+        height: 2vh;
+        width: 2vh;
+    }    
+}
+.swiper-slide {
+    height: 100%;
+}
+.gallery-poster {
     width: 100%;
-    border-radius: 15px; 
-    overflow: hidden;
-    img {
-         
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        margin: 0;
-    } 
+    height: 100%;
+    object-fit: cover;
+    border-radius: 20px ;
 }
 .slide-text {
     position: absolute;
     bottom: 0;
-    padding: 1%; 
-    height: 30%;
+    padding: 2%; 
+    height: 35%;
     overflow: hidden;
     color: $textWhite;
     text-shadow: 0 0 5px black;
+    p {
+        font-size: .9em;
+    }
 }
 .slide-header {
     display: flex;
     justify-content: left;
-    h1 {
+    h2 {
         margin: 0 2%;
+        font-size: 1.8em;
     }
     p {
         font-style: oblique;
@@ -57,9 +62,8 @@
     @include sliderArrow();
     right:3%; 
 }
-
 @media screen and (max-width: 650px) {
-    .slide-header h1 {
+    .slide-header h2 {
         font-size: 1.2em;
     }
     .slide-synopsis {
@@ -69,7 +73,6 @@
         font-size: .7em;
     }
 }
-
 .slide-tag {
     width: 100%;
     max-width: 1000px;
